Fixed sizing of our timeline canvas.
Size the canvas element to take up the entire width/height that we are
allocated.

Update the canvas width/height to match it's container width,
otherwise things get distorted.

Ensure canvas width is an whole number of pixels;

--- a/media/src/css/subtitle-editor/subtitle-editor.scss
+++ b/media/src/css/subtitle-editor/subtitle-editor.scss
@@ -1058,9 +1058,11 @@ section.timeline {
         }
     }
     canvas.timing-container {
-        height: 65px;
         position: absolute;
         top: 0;
+        left: 0;
+        height: 65px;
+        width: 100px;
     }
 }
 body.timeline-shown {
